--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
-alphavantage.api.key: NN2E3WQP66461VB6
+alphavantage:
+  api:
+    key: NN2E3WQP66461VB6
 server:
   error:
     whitelabel:
       enabled: false
+spring:
+  mvc:
+    throw-exception-if-no-handler-found: true
